--- a/daw/bdUno/indiceBdUno.html
+++ b/daw/bdUno/indiceBdUno.html
@@ -16,79 +16,79 @@
         <section class="temaIndice">
             <span>1.- Introducción a las bases de datos</span>
             <ul>
-                <li><a href="">Evolución histórica</a></li>
-                <li><a href="">Ventajas e inconvenientes</a></li>
-                <li><a href="">Almacenamiento de la información</a></li>
-                <li><a href="">Sistemas Gestores de bases de datos</a></li>
-                <li><a href="">ANSI/X3/SPARC. Estándares y niveles</a></li>
-                <li><a href="">Modelos de BBDD. Tipos: jerárquico, red, relacional y orientado a objetos</a></li>
-                <li><a href="">Bases de datos centralizadas y distribuidas</a></li>
+                <a href=""><li>Evolución histórica</li></a>
+                <a href=""><li>Ventajas e inconvenientes</li></a>
+                <a href=""><li>Almacenamiento de la información</li></a>
+                <a href=""><li>Sistemas Gestores de bases de datos</li></a>
+                <a href=""><li>ANSI/X3/SPARC. Estándares y niveles</li></a>
+                <a href=""><li>Modelos de BBDD. Tipos: jerárquico, red, relacional y orientado a objetos</li></a>
+                <a href=""><li>Bases de datos centralizadas y distribuidas</li></a>
             </ul>
         </section>
         <section class="temaIndice">
             <span>2.- Modelo entidad-relación</span>
             <ul>
-                <li><a href="">Concepto</a></li>
-                <li><a href="">Entidad: representación gráfica, atributos y tipos de claves</a></li>
-                <li><a href="">Relación: representación gráfica, atributos, grado y cardinalidad</a></li>
-                <li><a href="">Diagrama entidad-relación</a></li>
-                <li><a href="">Modelo entridad-relación extendido</a></li>
-                <li><a href="">Guía para la construcción de un modelo entidad-relación</a></li>
+                <a href=""><li>Concepto</li></a>
+                <a href=""><li>Entidad: representación gráfica, atributos y tipos de claves</li></a>
+                <a href=""><li>Relación: representación gráfica, atributos, grado y cardinalidad</li></a>
+                <a href=""><li>Diagrama entidad-relación</li></a>
+                <a href=""><li>Modelo entridad-relación extendido</li></a>
+                <a href=""><li>Guía para la construcción de un modelo entidad-relación</li></a>
             </ul>
         </section>
         <section class="temaIndice">
             <span>3.- Modelo relacional</span>
             <ul>
-                <li><a href="">Terminología del modelo relacional</a></li>
-                <li><a href="">Concepto de relación. Propiedades y relaciones</a></li>
-                <li><a href="">Atributos y dominio de los atributos</a></li>
-                <li><a href="">Concepto y tipos de clave: candidatas, primarias, ajenas, alternativas</a></li>
-                <li><a href="">Valores nulos</a></li>
-                <li><a href="">Reglas de integridad: de entidad y referencial</a></li>
-                <li><a href="">Traducción del modelo entidad-relación al modelo relacional. Tipo 1:1. Tipo 1:N. Tipo N:M</a></li>
+                <a href=""><li>Terminología del modelo relacional</li></a>
+                <a href=""><li>Concepto de relación. Propiedades y relaciones</li></a>
+                <a href=""><li>Atributos y dominio de los atributos</li></a>
+                <a href=""><li>Concepto y tipos de clave: candidatas, primarias, ajenas, alternativas</li></a>
+                <a href=""><li>Valores nulos</li></a>
+                <a href=""><li>Reglas de integridad: de entidad y referencial</li></a>
+                <a href=""><li>Traducción del modelo entidad-relación al modelo relacional. Tipo 1:1. Tipo 1:N. Tipo N:M</li></a>
             </ul>
         </section>
         <section class="temaIndice">
             <span>4.- Normalización</span>
             <ul>
-                <li><a href="">Concepto de normalización, dependencias funcionales y sus tipos</a></li>
-                <li><a href="">Las formas normales</a></li>
-                <li><a href="">Primera forma normal</a></li>
-                <li><a href="">Segunda forma normal</a></li>
-                <li><a href="">Tercera forma normal</a></li>
-                <li><a href="">Forma normal Boyce-Codd</a></li>
-                <li><a href="">Otras formas normales</a></li>
-                <li><a href="">Desnormalización</a></li>
+                <a href=""><li>Concepto de normalización, dependencias funcionales y sus tipos</li></a>
+                <a href=""><li>Las formas normales</li></a>
+                <a href=""><li>Primera forma normal</li></a>
+                <a href=""><li>Segunda forma normal</li></a>
+                <a href=""><li>Tercera forma normal</li></a>
+                <a href=""><li>Forma normal Boyce-Codd</li></a>
+                <a href=""><li>Otras formas normales</li></a>
+                <a href=""><li>Desnormalización</li></a>
             </ul>
         </section>
         <section class="temaIndice">
             <span>5.- Lenguajes de las BBDD. SQL</span>
             <ul>
-                <li><a href="">Tipos de lenguajes para gestionar los datos en un SGBDR corporativo</a></li>
-                <li><a href="">Herramientas gráficas proporcionadas por el SGBD para la edición de la BD. Descarga e instalación de MySQL Workbench y MariaDB</a></li>
-                <li><a href="">Lenguaje de definición de datos (DDL)</a></li>
-                <li><a href="">Lenguaje de manipulación de datos (DML)</a></li>
-                <li><a href="">Extensiones y otras cláusulas del lenguaje</a></li>
-                <li><a href="">Herramientas de la BDD para optimizar consultas</a></li>
+                <a href=""><li>Tipos de lenguajes para gestionar los datos en un SGBDR corporativo</li></a>
+                <a href=""><li>Herramientas gráficas proporcionadas por el SGBD para la edición de la BD. Descarga e instalación de MySQL Workbench y MariaDB</li></a>
+                <a href=""><li>Lenguaje de definición de datos (DDL)</li></a>
+                <a href=""><li>Lenguaje de manipulación de datos (DML)</li></a>
+                <a href=""><li>Extensiones y otras cláusulas del lenguaje</li></a>
+                <a href=""><li>Herramientas de la BDD para optimizar consultas</li></a>
             </ul>
         </section>
         <section class="temaIndice">
             <span>6.- Estrategias para el control de las transacciones y de la concurrencia</span>
             <ul>
-                <li><a href="">Concepto de integridad</a></li>
-                <li><a href="">Condepto de transacción. Control</a></li>
-                <li><a href="">Propiedades de las transacciones: atomicidad, consistencia, aislamiento y permanencia</a></li>
-                <li><a href="">Estados de una transacción: activa, parcialmente comprometida, fallida, abortada y comprometida</a></li>
-                <li><a href="">Sentencias de transacciones</a></li>
-                <li><a href="">Problemas derivados de la ejecución concurrente de transacciones</a></li>
-                <li><a href="">Control de concurrencia: técnicas optimmistas y pesimistas</a></li>
-                <li><a href="">Recuperación ante errores. Mecanismos para deshacer transacciones</a></li>
+                <a href=""><li>Concepto de integridad</li></a>
+                <a href=""><li>Condepto de transacción. Control</li></a>
+                <a href=""><li>Propiedades de las transacciones: atomicidad, consistencia, aislamiento y permanencia</li></a>
+                <a href=""><li>Estados de una transacción: activa, parcialmente comprometida, fallida, abortada y comprometida</li></a>
+                <a href=""><li>Sentencias de transacciones</li></a>
+                <a href=""><li>Problemas derivados de la ejecución concurrente de transacciones</li></a>
+                <a href=""><li>Control de concurrencia: técnicas optimmistas y pesimistas</li></a>
+                <a href=""><li>Recuperación ante errores. Mecanismos para deshacer transacciones</li></a>
             </ul>
         </section>
         <section class="temaIndice">
             <span>7.- Lenguajes de las BBDD para la creación de su estructura</span>
             <ul>
-                <li><a href="">Visitas y otras extensiones del lenguaje</a></li>
+                <a href=""><li>Visitas y otras extensiones del lenguaje</li></a>
             </ul>
         </section>
     </main>
