--- a/daw/Len_Marcas/indiceLen_Marcas.html
+++ b/daw/Len_Marcas/indiceLen_Marcas.html
@@ -12,6 +12,12 @@
   <title>Lenguajes de Marcas</title>
 </head>
 <body class="indice">
+    <header>
+        <div class="navtop">
+          <span>Sistemas Informáticos</span>
+          <a href="../../index.html">Principal</a>
+        </div>
+    </header>
     <main>
         <section class="temaIndice">
             <span>1.- Reconocimiento de las características de los lenguajes de marca</span>
