--- a/index.html
+++ b/index.html
@@ -187,17 +187,16 @@
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
         </a>
-      </section>
-      <!---------------------------------->
+      </section> -->
+      <!--------------------------------
       <section><h3 class="tituloSeccion">devAcademy</h3></section>
       <section class="devAcademy">
         
-      </section>
-      <!---------------------------------->
+      </section> -->
+      <!--------------------------------
       <section><h3 class="tituloSeccion">Proyectos</h3></section>
       <section class="proyectos">
-        
-      </section>
+      </section> -->
     </div>
   </body>
 </html>
