--- a/daw/bdUno/indiceBdUno.html
+++ b/daw/bdUno/indiceBdUno.html
@@ -12,6 +12,12 @@
   <title>Bases de Datos I</title>
 </head>
 <body class="indice">
+    <header>
+        <div class="navtop">
+          <span>Sistemas Informáticos</span>
+          <a href="../../index.html">Principal</a>
+        </div>
+    </header>
     <main>
         <section class="temaIndice">
             <span>1.- Introducción a las bases de datos</span>
