--- a/daw/proDos/proDosDoce.html
+++ b/daw/proDos/proDosDoce.html
@@ -22,12 +22,21 @@
         <section class="tema">
             <div class="tituloTema">
                 <a href=""></a>
-                <div class="numeroTema">7</div>
-                <h2>Titulo TEMA</h2>
+                <div class="numeroTema">12</div>
+                <h2>Interfaces gráficas de usuario</h2>
             </div>
-            <article class="articuloApuntes" id="">
+            <article class="articuloApuntes" id="doceUno">
                 <a href=""></a>
-                <h3>Título Apartado</h3>
+                <h3>Creación y uso de interfaces gráficas de usuarios simples</h3>
             </article>
+            <article class="articuloApuntes" id="doceDos">
+                <a href=""></a>
+                <h3>Paquetes de clases para el diseño de interfaces</h3>
+            </article>
+            <article class="articuloApuntes" id="doceTres">
+                <a href=""></a>
+                <h3>Acontecimientos (eventos). Creación y propiedades</h3>
+            </article>
+        </section>
     </body>
 </html>
