--- a/daw/proDos/proDosOcho.html
+++ b/daw/proDos/proDosOcho.html
@@ -22,12 +22,37 @@
         <section class="tema">
             <div class="tituloTema">
                 <a href=""></a>
-                <div class="numeroTema">7</div>
-                <h2>Titulo TEMA</h2>
+                <div class="numeroTema">8</div>
+                <h2>Utilización avanzada de clases en el diseño de aplicaciones</h2>
             </div>
-            <article class="articuloApuntes" id="">
+            <article class="articuloApuntes" id="ochoUno">
                 <a href=""></a>
-                <h3>Título Apartado</h3>
+                <h3>Composición de clases</h3>
             </article>
+            <article class="articuloApuntes" id="ochoDos">
+                <a href=""></a>
+                <h3>Herencia</h3>
+            </article>
+            <article class="articuloApuntes" id="ochoTres">
+                <a href=""></a>
+                <h3>Jerarquía de clases: superclase y subclases</h3>
+            </article>
+            <article class="articuloApuntes" id="ochoCuatro">
+                <a href=""></a>
+                <h3>Clases y métodos abstractos y finales</h3>
+            </article>
+            <article class="articuloApuntes" id="ochoCinco">
+                <a href=""></a>
+                <h3>Sobrescritura de métodos (Overriding)</h3>
+            </article>
+            <article class="articuloApuntes" id="ochoSeis">
+                <a href=""></a>
+                <h3>Herencia y constructores/destructores/métodos de finalización</h3>
+            </article>
+            <article class="articuloApuntes" id="ochoSiete">
+                <a href=""></a>
+                <h3>Interfaces</h3>
+            </article>
+        </section>
     </body>
 </html>
