--- a/daw/proDos/proDosTrece.html
+++ b/daw/proDos/proDosTrece.html
@@ -22,12 +22,17 @@
         <section class="tema">
             <div class="tituloTema">
                 <a href=""></a>
-                <div class="numeroTema">7</div>
-                <h2>Titulo TEMA</h2>
+                <div class="numeroTema">13</div>
+                <h2>Diseño de programas con lenguajes POO para gestionar bases de datos relacionales</h2>
             </div>
-            <article class="articuloApuntes" id="">
+            <article class="articuloApuntes" id="treceUno">
                 <a href=""></a>
-                <h3>Título Apartado</h3>
+                <h3>Establecimiento de conexiones</h3>
             </article>
+            <article class="articuloApuntes" id="treceDos">
+                <a href=""></a>
+                <h3>Recuperación y manipulación de información</h3>
+            </article>
+        </section>
     </body>
 </html>
