--- a/daw/proDos/proDosSiete.html
+++ b/daw/proDos/proDosSiete.html
@@ -23,11 +23,36 @@
             <div class="tituloTema">
                 <a href=""></a>
                 <div class="numeroTema">7</div>
-                <h2>Titulo TEMA</h2>
+                <h2>Desarrollo de programas orientados en clases</h2>
             </div>
-            <article class="articuloApuntes" id="">
+            <article class="articuloApuntes" id="sieteUno">
                 <a href=""></a>
-                <h3>Título Apartado</h3>
+                <h3>Concepto de clase. Estructura y componentes</h3>
             </article>
+            <article class="articuloApuntes" id="sieteDos">
+                <a href=""></a>
+                <h3>Creación de atributos</h3>
+            </article>
+            <article class="articuloApuntes" id="sieteTres">
+                <a href=""></a>
+                <h3>Creación de métodos</h3>
+            </article>
+            <article class="articuloApuntes" id="sieteCuatro">
+                <a href=""></a>
+                <h3>Creación de constructores</h3>
+            </article>
+            <article class="articuloApuntes" id="sieteCinco">
+                <a href=""></a>
+                <h3>Creación de destructores y/o métodos de finalización</h3>
+            </article>
+            <article class="articuloApuntes" id="sieteSeis">
+                <a href=""></a>
+                <h3>Uso de clases y objetos. Visibilidad</h3>
+            </article>
+            <article class="articuloApuntes" id="sisteSiete">
+                <a href=""></a>
+                <h3>Conjuntos y librerías de clases</h3>
+            </article>
+        </section>
     </body>
 </html>
