--- a/daw/Len_Marcas/lenMarSiete.html
+++ b/daw/Len_Marcas/lenMarSiete.html
@@ -15,7 +15,7 @@
     <body class="apuntes">
         <header>
             <div class="navtop">
-                <span>Lenguajes de marcas</span>
+                <a href="../Len_Marcas/indiceLen_Marcas.html">Lenguajes de marcas</a>
                 <a href="../../index.html">Principal</a>
             </div>
         </header>
