--- a/daw/proDos/proDosTrece.html
+++ b/daw/proDos/proDosTrece.html
@@ -15,7 +15,7 @@
     <body class="apuntes">
         <header>
             <div class="navtop">
-                <span>Programación II</span>
+                <a href="../proDos/indiceProDos.html">Programación II</a>
                 <a href="../../index.html">Principal</a>
             </div>
         </header>
